Added margin/padding and structure updating of webpage

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,12 +25,38 @@
 }
 
 /* Base */
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
   color: var(--color-primary-blue);
   line-height: 1.15;
+  margin: 0;
+}
+
+.container {
+  width: auto;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+.section {
+  padding: 48px 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
 }
 
 ul {
@@ -61,34 +87,40 @@ address {
 /* Main */
 
 /* Hero section */
+.hero-section {
+  padding: 160px 0 270px;
+}
+
 .hero-title {
   color: var(--color-brand);
+  margin-bottom: 40px;
   font-family: 'Play', sans-serif;
   font-weight: 700;
   font-size: 140px;
   line-height: 0.8;
   text-transform: capitalize;
-  margin: 16px 0 40px;
-}
-
-.button {
-  background-color: var(--color-brand);
-  border-radius: 32px;
-  color: var(--color-primary-white);
-  font-weight: 600;
-  border: 2px solid var(--color-brand);
-  padding: 16px 32px;
-}
-
-.button:hover {
-  background-color: transparent;
-  color: var(--color-primary-blue);
 }
 
 .hero-text {
   font-size: 12px;
   line-height: 1.5;
   color: var(--color-secondary-darkgray);
+}
+
+/* Button section */
+.button {
+  background-color: var(--color-brand);
+  border-radius: 32px;
+  color: var(--color-primary-white);
+  margin-bottom: 14px;
+  padding: 16px 32px;
+  border: 2px solid var(--color-brand);
+  font-weight: 600;
+}
+
+.button:hover {
+  background-color: transparent;
+  color: var(--color-primary-blue);
 }
 
 /* Section-titles */
@@ -100,7 +132,7 @@ address {
   text-align: center;
 }
 
-.information-section .information {
+.information-section .information-title {
   text-align: left;
 }
 
@@ -109,6 +141,14 @@ address {
 }
 
 /* Information section */
+.information-section {
+  padding: 40px 0 128px;
+}
+
+.information-title {
+  margin-bottom: 40px;
+}
+
 .section-title .brand {
   color: var(--color-brand);
   text-transform: capitalize;
@@ -126,6 +166,10 @@ address {
 }
 
 /* Features section */
+.features-title {
+  margin-bottom: 48px;
+}
+
 .feature-card {
   /* text-align: center; */
   background-color: var(--color-primary-white);
@@ -133,6 +177,10 @@ address {
 }
 
 /* Procedures section */
+.procedures-title {
+  margin-bottom: 48px;
+}
+
 .procedure-card {
   font-size: 22px;
   line-height: 1.2;
@@ -141,6 +189,14 @@ address {
 }
 
 /* Contacts section */
+.contacts-section {
+  padding-bottom: 95px;
+}
+
+.contacts-title {
+  margin-bottom: 48px;
+}
+
 .contact-map {
   width: 605px;
   height: 481px;
